# InjiSoftware

./: .gitignore  BUGTRACKER  Makefile  README  README.md  test.c  test.h
src/: -a  .Makefile.swp  .compile.swp  .gitignore  .main.h.swp  Makefile  README  a.out  aabb.txt  all.char  char.txt  compile  learning  main  main.c  mainNetwork.inji  random.char  skeleton.c  skeleton.h  test.inji  testRead.inji  testing.txt  trainingSet.list  trainingSet.txt  trainingSet2.list
src/Export/: export.c  export.h
src/Interface/: #OCR.glade#  .globalData.h.swp  .main.c.swp  .signals.c.swo  .signals.c.swp  OCR.glade  OCR.glade.bup  OCR.glade~  builder.ui  globalData.h  interface.c  interface.h  main.c  main.h  signals.c  signals.h
src/Networks/: testRead.inji
src/NeuralNetwork/: .learning.c.swp  .learning.h.swp  .neuronsUtils.c.swp  .neuronsUtils.h.swp  a.out  character.c  character.h  debug  gates.c  gates.h  learning.c  learning.h  neuronsLearning.c  neuronsLearning.h  neuronsUtils.c  neuronsUtils.h
src/PreTreatment/: <  hough.c  hough.h  matrixOperation.c  matrixOperation.h  segmentation.c  segmentation.h  split.c  split.cc  split.h  split.hh
src/Serialization/: serialization.c  serialization.h
src/Skeleton/: skeleton.c  skeleton.cc  skeleton.h
src/SpellCheck/: dictionnary.txt  spellcheck.c  spellcheck.h
src/Utils/: .image.c.swp  .image.h.swp  .math.c.swp  .math.h.swp  .matrixOperation.c.swp  .matrixOperation.h.swp  image.c  image.h  man  math.c  math.h  matrixOperation.c  matrixOperation.h  sort.c  sort.h  split.c  split.h
src/gtkspell3-3.0.6/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gtkspell3.spec.in
src/gtkspell3-3.0.6/docs/: Makefile.am  Makefile.in  gtkspell3-docs.sgml  gtkspell3-sections.txt  gtkspell3.types  tutorial.sgml  version.xml.in
src/gtkspell3-3.0.6/docs/html/: annotation-glossary.html  api-index-full.html  ch02.html  chapter-tutorial.html  deprecated-api-index.html  gtkspell3-gtkspell.html  gtkspell3.devhelp2  index.html  index.sgml  object-tree.html  tutorial-advanced.html  tutorial-bindings.html  tutorial-building.html  tutorial-lang.html
src/gtkspell3-3.0.6/examples/: Makefile.am  Makefile.in  advanced.c  simple-vala.c  simple-vala.vala  simple.c
src/gtkspell3-3.0.6/gtkspell/: Makefile.am  Makefile.in  gtkspell-codetable.c  gtkspell-codetable.h  gtkspell-win32.c  gtkspell-win32.h  gtkspell.c  gtkspell.h  gtkspell3-2.0.pc  gtkspell3-2.0.pc.in  gtkspell3-3.0.pc  gtkspell3-3.0.pc.in
src/gtkspell3-3.0.6/po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  af.po  ak.po  ast.po  be.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  ff.po  fi.po  fo.po  fr.po  ga.po  gl.po  gtkspell3.pot  he.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ky.po  lg.po  lt.po  lv.po  mn.po  ms.po  nb.po  nl.po  nso.po  (+23 more)
src/interface/: .interface.h.swp  main.c  main.h
src/trainingSets/: Calibri.txt  Cambria.txt  Gadugi.txt  LucidaConsole.txt  tmp.txt  trainingSet.txt  trainingSet2.txt  trainingSet3.txt
src2/: Inji  Makefile
src2/Interface/: interface.c  interface.h  signals.h
src2/NeuralNetwork/: neuronsUtils.c  neuronsUtils.h
src2/PreTreatment/: hough.c  hough.h  split.h
src2/Utils/: image.h  math.c  math.h
